change the library for handle a gridview calendar

--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,25 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.squareup.timessquare.sample">
+    package="com.squareup.timessquare.sample" >
 
     <application
-        android:label="@string/app_name"
-        android:icon="@drawable/icon"
         android:allowBackup="false"
+        android:icon="@drawable/icon"
+        android:label="@string/app_name"
         android:supportsRtl="true"
-        tools:ignore="UnusedAttribute">
-
+        tools:ignore="UnusedAttribute" >
         <activity
             android:name=".SampleTimesSquareActivity"
-            android:label="@string/app_name"
             android:configChanges="orientation|screenSize|keyboardHidden"
-            >
-
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".SampleCalendarGridActivity"
+            android:label="@string/title_activity_sample_calendar_grid" >
+        </activity>
     </application>
+
 </manifest>
